onel line per project

--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -21,7 +21,7 @@
   %>
 
     <div class="dashboard">
-      <img src="<%= image %>" />&nbsp;<a href="<%= href %>"><%= project %><%= label %></a>&nbsp;&nbsp;&nbsp;
+      <img src="<%= image %>" />&nbsp;<a href="<%= href %>"><%= project %><%= label %></a><br/>
     </div>
 
   <%
