Use different name for cvs and svn web urls. needed because we can't have the same html field twice with same name (one overwrites the other)

--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -41,6 +41,6 @@
   </tr>
   <tr>
     <td>ViewCVS/Fisheye base URL</td>
-    <td><input class="scm_info" name="view_cvs_url" id="view_cvs_url" type="text" value="<%= project_config['view_cvs_url'] %>"></td>
+    <td><input class="scm_info" name="cvs_web_url" id="cvs_web_url" type="text" value="<%= project_config['cvs_web_url'] %>"></td>
   </tr>
 </table>
