--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -10,6 +10,6 @@
   </tr>
   <tr>
     <td>ViewCVS/Fisheye base URL</td>
-    <td><input class="scm_info" name="view_cvs_url" id="view_cvs_url" type="text" value="<%= project_config['view_cvs_url'] %>"></td>
+    <td><input class="scm_info" name="svn_web_url" id="svn_web_url" type="text" value="<%= project_config['svn_web_url'] %>"></td>
   </tr>
 </table>
