need cygwin ruby build (fork required) some more cvs pserver info etc

--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -20,8 +20,8 @@
     <td><input class="scm_info" id="cvsuser" onKeyUp="updateCvsRootField()" type="text"></td>
   </tr>
   <tr>
-    <td>Password</td>
-    <td><input class="scm_info" name="cvspassword" id="cvspassword" onKeyUp="updateCvsRootField()" type="text"></td>
+    <td>Password<br/><b>requires you to log in with "cvs login" first!</b></td>
+    <td><input class="scm_info" name="cvspassword" id="cvspassword" onKeyUp="updateCvsRootField()" type="password"></td>
   </tr>
   <tr>
     <td>Server</td>
