--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -2,7 +2,13 @@
 <table>
   <tr>
     <td class="config_cell">CVSROOT</td>
-    <td><input class="scm_info" name="cvsroot" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value=<%= project_config['cvsroot'] %>></td>
+    <% 
+      # Hackish/Neat trick:
+      # the inspect will convert backslashes to double backslashes and do all sorts of nice things
+      # it will also add " " around the string so it is not needed in the actual html
+      cvsroot_attrib_value = project_config['cvsroot'].inspect
+    %>
+    <td><input class="scm_info" name="cvsroot" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value=<%=  cvsroot_attrib_value %>></td>
   </tr>
   <tr>
     <td>Protocol</td>
@@ -20,8 +26,8 @@
     <td><input class="scm_info" id="cvsuser" onKeyUp="updateCvsRootField()" type="text"></td>
   </tr>
   <tr>
-    <td>Password<br/><b>requires you to log in with "cvs login" first!</b></td>
-    <td><input class="scm_info" name="cvspassword" id="cvspassword" onKeyUp="updateCvsRootField()" type="password"></td>
+    <td>Password</td>
+    <td><input class="scm_info" name="cvspassword" id="cvspassword" onKeyUp="updateCvsRootField()" value="<%= project_config['cvspassword'] %>" type="password"></td>
   </tr>
   <tr>
     <td>Server</td>
@@ -44,3 +50,15 @@
     <td><input class="scm_info" name="cvs_web_url" id="cvs_web_url" type="text" value="<%= project_config['cvs_web_url'] %>"></td>
   </tr>
 </table>
+
+<h4>Warning!</h4>
+<p>
+Password will be shown in cleartext in configuration files.
+</p>
+
+<h4>For CVS NT users:</h4>
+<p>
+Please ensure that there are no backslashes for the path to the repository as the Cygwin build of the CVS client which 
+DamageControl by default uses does not recognize that as a valid path spec (no Unix builds of the CVS client recognizes 
+backslashes).
+</p>
