--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -81,7 +81,7 @@
           <td><image src="<%= file_icon(change) %>"/></td>
           <td><%= change.revision %></td>
           <td>
-            <% if scm_url(project_name, change) then %>
+            <% if scm_url(change) then %>
               <a href="<%= scm_url(project_name, change) %>"><%= change.path %></a>
             <% else %>
               <%= change.path %>
