--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -82,7 +82,7 @@
           <td><%= change.revision %></td>
           <td>
             <% if scm_url(change) then %>
-              <a href="<%= scm_url(project_name, change) %>"><%= change.path %></a>
+              <a href="<%= scm_url(change) %>"><%= change.path %></a>
             <% else %>
               <%= change.path %>
             <% end %>
