--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -72,7 +72,7 @@
       %>
 
         <tr class="pane">
-          <td colspan="3" class="changeset"><%= changeset.developer %> : <%= html_quote(changeset.message) %></td>
+          <td colspan="3" class="changeset"><%= changeset.developer %> : <%= quote_message(changeset.message) %></td>
         </tr>
         <%
         changeset.each do |change|
