refactored build number handling so you can override the next build number Fixed DC-157 (I think) BuildExecutor no longer depends on ProjectDirectories or anything else Build now has the scm (created by ProjectConfigRepository when creating Build)

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -59,6 +59,10 @@ function showScm(scm) {
   <td><input class="scm_info" name="jira_url" id="jira_url" type="text" value="<%= project_config['jira_url'] %>"/></td>
 </tr>
 <tr>
+  <td>Next build number</td>
+  <td><input class="scm_info" name="next_build_number" id="next_build_number" type="text" value="<%= next_build_number %>"/></td>
+</tr>
+<tr>
   <td>Source control</td>
   <td>
     <% scm_configurators.each do |scm_configurator| %>
