DC-146, easier EmailPublisher config moved human BuildExecutor status message to BuildExecutor (from ProjectServlet), makes it more extensible (for example distributed BuildExecutors needs to show whether they are connected or not)

--- a/trunk/server/damagecontrol/web/components/build_executor_status.erb
+++ b/trunk/server/damagecontrol/web/components/build_executor_status.erb
@@ -13,7 +13,7 @@
   %>
   <tr>
     <td class="pane">#<%= i %></td>
-    <td class="pane"><%= build_executor_status_message(build_executor) %></td>
+    <td class="pane"><%= build_executor.status_message %></td>
   </tr>
   <% end %>
 </table>
