added vertica rulers

--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -19,7 +19,7 @@
 <a href="http://damagecontrol.codehaus.org/"><img class="logo" src="images/damagecontrol-logo.png"/></a>
 </td></tr>
 
-<tr>
+<tr id="top-nav">
 	<td id="left-top-nav">
     <%= breadcrumbs %>
 	</td>
