--- a/trunk/server/damagecontrol/web/css/style.css
+++ b/trunk/server/damagecontrol/web/css/style.css
@@ -10,6 +10,7 @@ td {
 
 #main-table {
   padding: 0;
+  border-collapse: collapse;
 }
 
 #top-panel {
@@ -19,10 +20,16 @@ td {
 
 #left-top-nav {
   text-align: left;
+  border-top: 1px solid #7f7f7f;
+  border-bottom: 1px solid #7f7f7f;
+  padding-bottom: 5px;
 }
 
 #right-top-nav {
   text-align: right;
+  border-top: 1px solid #7f7f7f;
+  border-bottom: 1px solid #7f7f7f;
+  padding-bottom: 5px;
 }
 
 #main-panel {
