--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -12,17 +12,23 @@
       </td>
 
       <td class="dashboard">
+      
         <table class="dashboard">
           <tr>
             <td class="dashboard">
               <%= build_queue %>
             </td>
+          </tr>
+          <tr>
             <td class="dashboard">
               <%= build_executor_status %>
             </td>
           </tr>
+        </table>
+        
       </td>
-
+    </tr>
+    
   </table>
   
 </body>
