--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -7,68 +7,26 @@
 
 <h1 class="pane"><img src="images/timestampstatus?project_name=<%= project_name %>&timestamp=<%= selected_build.timestamp %>"/> <%= build_description(selected_build) %></h1>
 
-
-<table class="main-table">
-
-  <%
-  # =============== changes pane
-  %>
+<table class="tab" nowrap="nowrap" width="100%">
+  <tr>
+    <% tabs.each do |tab| %>
   
-  <tr><td>  
-  <% if selected_build then %>
-
-  <%
-  previous_successful_build = build_history_repository.previous_successful_build(selected_build)
-  previous_successful_build_link = "<a href=\"#{build_url(previous_successful_build)}\">(##{previous_successful_build.label})</a>" if previous_successful_build
-  this_build_link = "<a href=\"#{build_url(selected_build)}\">(##{selected_build.label})</a>"
-  %>
-
-  <table class="pane">
-    <tr><td class="pane-header" colspan="3">
-      <% if(previous_successful_build) %>
-        Changes between this build <%= this_build_link %> and last successful build #{previous_successful_build_link}
-      <% else %>
-        Changes
-      <% end %>
-    </td></tr>
-    <% if(selected_build.changesets.length == 0)then %>
-      <tr>
-        <td colspan="3">
-          <%= no_changes_in_this_build %>
-        </td>
-      </tr>
-    <% else %>
-      <%
-      selected_build.changesets.each do |changeset|
-      %>
-
-        <tr class="pane">
-          <td colspan="3" class="changeset"><%= changeset.developer %> : <%= quote_message(changeset.message) %></td>
-        </tr>
-        <%
-        changeset.each do |change|
-        %>
-        <tr>
-          <td><image src="<%= file_icon(change) %>"/></td>
-          <td><%= change.revision %></td>
-          <td>
-            <% if scm_url(change) then %>
-              <a href="<%= scm_url(change) %>"><%= change.path %></a>
-            <% else %>
-              <%= change.path %>
-            <% end %>
-          </td>
-        </tr>
-        <% end %>
-
-      <% end %>
+      <td nowrap="true" valign="center" <% if selected_tab == tab then %>class="selected_tab"<% else %>class="tab"<% end %>>
+      <% if selected_tab != tab then %><a href="?project_name=<%= project_name %>&timestamp=<%= selected_build.timestamp %>&tab=<%= tab.id %>"><% end %>
+      <% if tab.icon then %><img valign="center" src="<%= tab.icon %>" />&nbsp;<% end %><%= tab.title %>
+      <% if selected_tab != tab then %></a><% end %>
+      </td>
+    
     <% end %>
-  </table>
-  
-  <% end %>
-
-  </td></tr>
-  
+    <td width="100%" class="tab_filler">
+      &nbsp;
+    </td>
+  </tr>
+  <tr>
+    <td colspan="<%= tabs.size + 1 %>">
+      <%= selected_tab.content %>
+    </td>
+  </tr>
 </table>
 
 
