specify width/height on images on dashboard

--- a/trunk/server/damagecontrol/web/components/project_status.erb
+++ b/trunk/server/damagecontrol/web/components/project_status.erb
@@ -8,7 +8,7 @@ projects.each do |project|
   label = ""
   label = " (##{last_successful_build.label})" if(last_successful_build)
 %>
-  <img src="<%= image %>" />&nbsp;<a href="<%= href %>"><%= project %><%= label %></a><br/>
+  <img width="32" height="32" src="<%= image %>" />&nbsp;<a href="<%= href %>"><%= project %><%= label %></a><br/>
 <%
 end
 %>
