--- a/trunk/server/damagecontrol/web/components/task.erb
+++ b/trunk/server/damagecontrol/web/components/task.erb
@@ -1,1 +1,1 @@
-<a href="<%= url %>"><image src="<%= icon %>"/></a> <a href="<%= url %>"><%= name %></a>
+<a href="<%= url %>"><image width="24" height="24" src="<%= icon %>"/></a> <a href="<%= url %>"><%= name %></a>
