--- a/trunk/server/damagecontrol/web/components/global_search_form.erb
+++ b/trunk/server/damagecontrol/web/components/global_search_form.erb
@@ -1,7 +1,5 @@
-<form action="project">
+<form action="search">
   Search builds:<br>
-  <image src="icons/find.png"/> <input name="search" value="<%= request.query['search'] %>"/>
+  <img width="24" height="24" src="icons/find.png"/> <input name="search" value="<%= request.query['search'] %>"/>
   <input type="submit" value="Go"/>
-
-  <input name="action" value="search" type="hidden"/>
 </form>
