--- a/trunk/server/damagecontrol/web/search_results.erb
+++ b/trunk/server/damagecontrol/web/search_results.erb
@@ -9,7 +9,7 @@
 
 <tr><td>
 
-<%= builds_table(:header_text => "Search results", :empty_text => "No matching builds were found", :builds => builds, :prefix_with_project_name => true) %>
+<%= builds_table(:header_text => "Search results", :base_url => "project", :empty_text => "No matching builds were found", :builds => builds, :prefix_with_project_name => true) %>
 
 </td></tr>
 
