--- a/trunk/server/damagecontrol/web/components/search_form.erb
+++ b/trunk/server/damagecontrol/web/components/search_form.erb
@@ -1,8 +1,7 @@
-<form action="project">
+<form action="search">
   Search <%= project_name %> builds:<br>
-  <image src="icons/find.png"/> <input name="search" value="<%= request.query['search'] %>"/>
+  <img width="24" height="24" src="icons/find.png"/> <input name="search" value="<%= request.query['search'] %>"/>
   <input type="submit" value="Go"/>
 
   <input name="project_name" value="<%= project_name %>" type="hidden"/>
-  <input name="action" value="search" type="hidden"/>
 </form>
