--- a/trunk/server/damagecontrol/web/components/changes.erb
+++ b/trunk/server/damagecontrol/web/components/changes.erb
@@ -24,8 +24,8 @@
         <td><img width="16" height="16" src="<%= file_icon(change) %>"/></td>
         <td><%= change.revision %></td>
         <td>
-          <% if scm_url(change) then %>
-            <a href="<%= scm_url(change) %>"><%= change.path %></a>
+          <% if web_url_to_change(change) then %>
+            <a href="<%= web_url_to_change(change) %>"><%= change.path %></a>
           <% else %>
             <%= change.path %>
           <% end %>
