show limited number of builds on frontpage, rest in drop down box (makes page faster to load)

--- a/trunk/server/damagecontrol/web/components/builds_table.erb
+++ b/trunk/server/damagecontrol/web/components/builds_table.erb
@@ -19,14 +19,17 @@
 <% else %>
 
   <%
+    builds = builds.reverse
+    builds_to_display = builds[0..max_number_of_builds]
+    builds_to_option_box = builds[max_number_of_builds..-1]
+    prefix = ""
+    prefix = "#{build.project_name} " if prefix_with_project_name
     i = -1
-    builds.reverse.each do |build|
+    builds_to_display.each do |build|
       i = i + 1
       color = if build.successful? then "green" else "red" end
       color = "grey" if !build.completed?
       image = "images/#{color}-16.gif"
-      prefix = ""
-      prefix = "#{build.project_name} " if prefix_with_project_name
   %>
   <tr class="build-row">
     <% if((i%2) == 0) %>
@@ -57,7 +60,25 @@
       </a>
     </td>
   </tr>
-<% end %>
+  
+  <% end %>
+
+  <% if builds_to_option_box && !builds_to_option_box.empty? %>
+    <tr class="build-row">
+      <td class="build-cell-even">
+        <form method="get" action="<%= base_url %>">
+          <input type="hidden" name="project_name" value="<%= project_name %>" />
+          <select name="timestamp" onchange="submit()">
+          
+          <% builds_to_option_box.each do |build| %>
+            <option value="<%= build.timestamp_as_s %>"><%= prefix %><%= build_description(build) %></option>      
+          <% end %>
+          
+          </select>
+        </form>
+      </td>
+    </tr>
+  <% end %>  
 
 <% end %>
 
