--- a/trunk/server/damagecontrol/web/components/project_status.erb
+++ b/trunk/server/damagecontrol/web/components/project_status.erb
@@ -2,7 +2,7 @@
 <tr>
     <th>&nbsp;</th>
     <th>Project</th>
-    <th>Last Successful Build</th>
+    <th>Last Success</th>
     <th>&nbsp;</th>
 </tr>
 
@@ -22,7 +22,7 @@ projects.each do |project|
     <td><a href="<%= href %>"><%= project %><%= label %></a></td>
     <td><%= ago %></td>
     <% if private? %>
-    <td align="center" style="border-left: 1px solid #7f7f7f; color: #7f7f7f;"> <a href="configure?project_name=<%=project%>&action=configur
+    <td align="center" style="border-left: 1px solid #bbb; color: #bbb;"> <a href="configure?project_name=<%=project%>&action=configur
 e" title="Configure <%=project%>"><img src="icons/wrench.png" width="24" height="24"/></a>
         | <a href="project?project_name=<%=project%>&action=trig_build" title="Trigger build for <%=project%>"><img src="icons/gears_run.png
 " width="24" height="24"/></a></td>
