--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -10,22 +10,10 @@
       <td class="dashboard">
         <%= project_status %>
       </td>
-
       <td class="dashboard">
-      
-        <table class="dashboard">
-          <tr>
-            <td class="dashboard">
-              <%= build_queue %>
-            </td>
-          </tr>
-          <tr>
-            <td class="dashboard">
-              <%= build_executor_status %>
-            </td>
-          </tr>
-        </table>
-        
+          <%= build_queue %>
+	  &nbsp;
+          <%= build_executor_status %>
       </td>
     </tr>
     
