--- a/trunk/server/damagecontrol/web/components/builds_table.erb
+++ b/trunk/server/damagecontrol/web/components/builds_table.erb
@@ -32,12 +32,9 @@
       prefix = "#{build.project_name} " if prefix_with_project_name
   %>
   <tr class="build-row">
-    <% if((i%2) == 0) %>
-    <td class="build-cell-even">
-    <% else %>
-    <td class="build-cell-odd">
-    <% end %>
+    <td>
       <img width="16" height="16" src="<%= image %>" />&nbsp;
+    <% if selected_build == build then%><span class="highlighted-build"><% end %>
       <a class="tip" href="<%= base_url %><%= build_url(build) %>">
         <% if selected_build == build then %><b><% end %>
         
@@ -58,6 +55,7 @@
           <% end %>
         </span>
       </a>
+    <% if selected_build == build then%></span><% end %>
     </td>
   </tr>
   
