--- a/trunk/server/damagecontrol/web/trigger_installed.erb
+++ b/trunk/server/damagecontrol/web/trigger_installed.erb
@@ -20,7 +20,7 @@
     <p>
       The trigger installation mechanism can sometimes malfunction in tricky situations, double-check by
       inspecting the content of your loginfo file:
-      <a href="root/<%= project_name %>/checkout/CVSROOT/loginfo">here</a>.
+      <a href="root/<%= project_name %>/checkout/CVSROOT/loginfo">here</a> and verify that it has been committed.
     </p>
     
   <% else %>
