--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -5,17 +5,9 @@
 </head>
 <body>
 
-  <table class="dashboard">
-    <tr>
-      <td class="dashboard">
-        <%= project_status %>
-      </td>
-      <td class="dashboard">
-          <%= build_queue %>
-	  &nbsp;
-          <%= build_executor_status %>
-      </td>
-    </tr>
+    <div class="dashboard">
+      <%= project_status %>
+    </td>
     
   </table>
   
